--- a/process/sass/framework/_forms.scss
+++ b/process/sass/framework/_forms.scss
@@ -2,7 +2,7 @@
     // basic form element style
     padding: var(--space-xs) var(--space-sm);
     background: var(--color-bg);
-    border: 2px solid var(--color-contrast-low);
+    border: 2px solid var(--color-contrast-cold-low);
     width: 100%;
 
     &:focus {
@@ -12,20 +12,20 @@
     }
 
     &::-webkit-input-placeholder {
-        color: var(--color-contrast-medium);
+        color: var(--color-contrast-cold-medium);
     }
 
     &::-moz-placeholder {
         opacity: 1;
-        color: var(--color-contrast-medium);
+        color: var(--color-contrast-cold-medium);
     }
 
     &:-ms-input-placeholder {
-        color: var(--color-contrast-medium);
+        color: var(--color-contrast-cold-medium);
     }
 
     &:-moz-placeholder {
-        color: var(--color-contrast-medium);
+        color: var(--color-contrast-cold-medium);
     }
 }
 
@@ -42,7 +42,7 @@
 }
 
 .form-legend {
-    color: var(--color-contrast-higher);
+    color: var(--color-contrast-cold-higher);
     line-height: 1.2;
     font-size: var(--text-md);
     margin-bottom: var(--space-xxs);
