--- a/process/sass/framework/_typography.scss
+++ b/process/sass/framework/_typography.scss
@@ -40,12 +40,12 @@
 body {
     font-size: var(--text-base-size);
     font-family: var(--font-primary);
-    color: var(--color-contrast-high);
+    color: var(--color-contrast-cold-high);
 }
 
 h1, h2, h3, h4 {
     font-family: var(--font-secondary);
-    color: var(--color-contrast-higher);
+    color: var(--color-contrast-cold-higher);
     line-height: var(--heading-line-height);
 }
 
@@ -101,7 +101,7 @@ u {
 }
 
 .text--subtle {
-    color: var(--color-contrast-medium);
+    color: var(--color-contrast-cold-medium);
 }
 
 .text-component {
@@ -150,7 +150,7 @@ u {
 
     p, blockquote, ul li, ol li {
         line-height: var(--component-body-line-height);
-        color: var(--color-contrast-high);
+        color: var(--color-contrast-cold-high);
     }
 
     ul, ol, p, blockquote {
@@ -175,7 +175,7 @@ u {
 
     blockquote {
         padding-left: 1em;
-        border-left: 4px solid var(--color-contrast-low);
+        border-left: 4px solid var(--color-contrast-cold-low);
     }
 
     hr {
@@ -214,7 +214,7 @@ u {
     figcaption {
         text-align: center;
         font-size: var(--text-sm);
-        color: var(--color-contrast-medium);
+        color: var(--color-contrast-cold-medium);
     }
 }
 
